stopping point for the night
The search bar looks out of place and this needs more style and Im not in love with the fonts chosen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,9 @@ body{
     font-family: 'Montserrat', sans-serif;
     font-size: 40px;
     line-height: 1.5;
+    color: #ff8000;
 }
 
+
+}
 
